<resources>
    <string name="app_name">Bud\'s Bank</string>
    <string name="are_you_18_or_older">Are you 18 or older?</string>
    <string name="age_limit_desc">Bud’s Bank requires that you meet the legal age requirements of your area to view cannabis information through the Bud’s Bank app.</string>
    <string name="age_confirmation">I confirm that I am 18 or over and that I agree to the Bud’s Bank %s and %s.</string>
    <string name="i_agree">I Agree</string>
    <string name="decline">Decline</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="how_does_it_work">How does it work?</string>
    <string name="come_on_buddy">C’mon in buddy.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_up_header">Sign up, take a hit.</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="space_on_your_password">Space on your password?</string>
    <string name="no_account_bud">No account bud?</string>
    <string name="accept_disclaimer">By continuing I confirm that I am 18 or over and that I agree to the Bud’s Bank %s and %s.</string>
    <string name="bank">Bank</string>
    <string name="dispensaries">Dispensaries</string>
    <string name="shop">Shop</string>
    <string name="shops">Shops</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="quiz">Quiz</string>
    <string name="coins_available">coins available:</string>
    <string name="dispensary">Dispensary</string>
    <string name="redeem">Redeem</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="forgot_have_an_account">Forgot you have an account…</string>
    <string name="confirm">Confirm</string>
    <string name="alert_message">Please confirm your identity by entering the code sent to your email address</string>
    <string name="alert_sms_message">We just sent you a SMS to your phone number: %s. Please enter it below to confirm your identity.</string>
    <string name="email_not_verified">Your email is not verified. Enter the code sent to your email address to proceed.</string>
    <string name="corktown">Corktown Collective</string>
    <string name="address">2101 W Lafayette Blvd Suite 106, Detroit, MI 48216</string>
    <string name="learn_more">Learn More</string>
    <string name="available_shops">Available shops near you</string>
    <string name="choose_shop">Choose a shop</string>
    <string name="completed_shop">Completed shops</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="coins_in_bank">COINS IN BANK</string>
    <string name="coins_up_for_grab">COINS UP FOR GRABS</string>
    <string name="play">Play</string>
    <string name="go_back">Go Back</string>
    <string name="question_number">QUESTION %d OF 5</string>
    <string name="qns">What is the only U.S. state that only borders one other?</string>
    <string name="rhode">Rhode Island</string>
    <string name="maine">Maine</string>
    <string name="washington">Washington</string>
    <string name="florida">Florida</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="results">RESULTS</string>
    <string name="game_summary">Game Summary</string>
    <string name="itsagoodthang">itzagoodthang</string>
    <string name="play_again">Play again</string>
    <string name="result">You got %d of 5 correct!</string>
    <string name="coins_earned">COINS EARNED:</string>
    <string name="shop_not_listed">Favorite shop not listed?</string>
    <string name="let_us_know">Let us know!</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="call_now">Call now</string>
    <string name="directions">Directions</string>
    <string name="open_now">Open now</string>
    <string name="go_to_piggy_bank">Go to Piggy Bank</string>
    <string name="close">Close</string>
    <string name="forget_password_desc">Enter your email address below and we will help you get your account back</string>
    <string name="coins_in_piggy_bank">COINS IN PIGGY BANK:</string>
    <string name="available">Available</string>
    <string name="redeemed">Redeemed</string>
    <string name="claim">Claim</string>
    <string name="expires">Expires: </string>
    <string name="no_points">No Points available.</string>
    <string name="go_play">Go play a game.</string>
    <string name="green_peace">Green Peace</string>
    <string name="green_peace_address">3456 E Jefferson Ave, Detroit, MI 48216</string>
    <string name="alert_claim_coins">Are you sure you want to claim %s at %s</string>
    <string name="coins">coins</string>
    <string name="enter_code">Enter Code</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="location_alert">The required permissions mandatory to fetch the location have been denied. Go to Settings?</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="enter_valid_password">Enter a password that contains capital, lowercase, number, symbol and has a minimum length of 8</string>
    <string name="enter_password">Enter a password of minimum 8 length</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_valid_email">Enter a valid email address</string>
    <string name="fill_all_fields">All fields are mandatory. Fill them all to proceed</string>
    <string name="password_mismatch">Your password and confirm password mismatch</string>
    <string name="something_went_wrong">Oops!Something went wrong</string>
    <string name="link_sent_to_email">A reset link has been sent to your provided email</string>
    <string name="link_sent_to_phone">A reset link has been sent to your provided phone number</string>
    <string name="gps_not_enabled">Gps is not enabled , enable it to proceed</string>
    <string name="location_not_enabled">Location not enabled</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="select_country">Select Country</string>
    <string name="enter_country_code">Select your country code</string>
    <string name="enter_valid_phone">Enter a valid phone number</string>
    <string name="loading">Loading…</string>
    <string name="verification_code_required">Verification code required</string>
    <string name="no_internet_alert">No Internet! Please make sure you are connected to the internet</string>
    <string name="call_fail_error">Something went wrong, try again later</string>
    <string name="initializing_quiz">Initializing Quiz</string>
    <string name="no_questions_available">This shop does not have any active questions at the moment, try again later.</string>
    <string name="saving_details">Saving quiz details…</string>
    <string name="settings">settings</string>
    <string name="profile">Profile</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="feedback">Feedback</string>
    <string name="log_out">Log Out</string>
    <string name="my_profile">My Profile</string>
    <string name="phone_no">Phone No.</string>
    <string name="user_name">User name</string>
    <string name="update">Update</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallery">From Gallery</string>
    <string name="no_value_changed">No field has changed to update the profile</string>
    <string name="notification_disclaimer">You can only receive notifications from shops you follow</string>
    <string name="inbox">Inbox</string>
    <string name="deals">Deals</string>
    <string name="all">All</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>
    <string name="delete">Delete</string>
    <string name="sunday_night_specials">Sunday Night Specials</string>
    <string name="dummy_notification">Shatter Specials $250 OZ Gelato $250 OZ Mac $280 OZ Wedding Cake 3G/$100 Valhalla THCA -7 Strains $45 Blessed…</string>
    <string name="truee">true</string>
    <string name="falsee">false</string>
    <string name="search">Search</string>
    <string name="closed_now">Closed Now</string>
    <string name="required_permissions_denied_error">The required permissions for the referenced functionality have been denied. Go to Settings?</string>
    <string name="cancel_quiz_alert">Quiting will make this shop unavailable for the next 24 hrs. Are you sure you want to quit?</string>
    <string name="capital_cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no_shop_found">No available shop found</string>
    <string name="no_featured_dispensary">No dispensary marked as featured</string>
    <string name="no_record_found">No record found</string>
    <string name="shop_not_found">No shops found</string>
    <string name="no_dispensary_found">No available shop found</string>
    <string name="deals_place_holder">$250Oz Gelato $250Oz Mac $280Oz Wedding Cake3g/$100 Valhalla Thca-7 Strains $45 Blessed Farms Resin $40 Forever J 6/$100 1g Vape Flower $79 Oz Bubble Gum $150 Oz Pushers </string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="your_next_joint_could_be_on">Your next joint could be on:</string>
    <string name="view_profile">View Profile</string>
    <string name="vouchers">Vouchers</string>
    <string name="follow_to_play">Follow to play</string>
    <string name="products">Products</string>
</resources>
