<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        android:background="@drawable/bg"
        tools:context=".activities.LoginActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/logo_small"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_35sdp"
                />
            <TextView
                style="@style/AppTheme.Widget.TextView.Black"
                android:text="@string/come_on_buddy"
                android:textSize="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_gravity="center_horizontal"
                />
            <EditText
                android:id="@+id/et_email"
                android:inputType="textEmailAddress"
                style="@style/AppTheme.Widget.EditText"
                android:layout_marginTop="@dimen/_30sdp"
                android:hint="@string/email"
                />
            <EditText
                android:id="@+id/et_password"
                android:inputType="textPassword"
                style="@style/AppTheme.Widget.EditText"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/password"
                />
            <TextView
                android:id="@+id/tv_space"
                style="@style/AppTheme.Widget.TextView.SemiBold"
                android:text="@string/space_on_your_password"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/_5sdp"
                />
            <Button
                android:id="@+id/btn_login"
                style="@style/AppTheme.Widget.Button"
                android:text="@string/log_in"
                android:layout_marginTop="@dimen/_30sdp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/_2sdp"
                android:padding="@dimen/_5sdp"
                >
                <TextView
                    style="@style/AppTheme.Widget.TextView.SemiBold"
                    android:text="@string/no_account_bud"
                    android:textSize="@dimen/_12sdp"
                    />
                <TextView
                    android:id="@+id/tv_signup"
                    style="@style/AppTheme.Widget.TextView.SemiBold"
                    android:text="@string/sign_up"
                    android:background="?attr/selectableItemBackground"
                    android:textColor="@color/yellow_68"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_terms"
                style="@style/AppTheme.Widget.TextView"
                android:text="@string/accept_disclaimer"
                android:textSize="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:lineSpacingMultiplier="1.15"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:textColorLink="@color/white"
                />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>