<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".activities.ForgotPasswordActivity">

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_45sdp"
        android:src="@drawable/logo_small" />

    <TextView
        style="@style/AppTheme.Widget.TextView.Black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/forgot_your_password"
        android:textSize="@dimen/_18sdp" />

    <TextView
        android:id="@+id/tv_terms"
        style="@style/AppTheme.Widget.TextView"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:lineSpacingMultiplier="1.15"
        android:text="@string/forget_password_desc"
        android:textSize="@dimen/_11sdp" />

    <EditText
        android:id="@+id/et_phone"
        style="@style/AppTheme.Widget.EditText"
        android:layout_marginTop="@dimen/_30sdp"
        android:inputType="phone"
        android:hint="@string/phone_number" />

    <Button
        android:id="@+id/btn_confirm"
        style="@style/AppTheme.Widget.Button"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/confirm" />

</LinearLayout>