<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AgeGateActivity"
    android:background="@drawable/bg"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:src="@drawable/logo_small"
        android:layout_marginTop="@dimen/_60sdp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/AppTheme.Widget.TextView.Black"
            android:text="@string/are_you_18_or_older"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_18sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            />
        <TextView
            style="@style/AppTheme.Widget.TextView"
            android:text="@string/age_limit_desc"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:lineSpacingExtra="1.1dp"
            android:lineSpacingMultiplier="1.15"
            />
        <TextView
            android:id="@+id/tv_terms"
            style="@style/AppTheme.Widget.TextView"
            android:text="@string/age_confirmation"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:lineSpacingExtra="1.1dp"
            android:lineSpacingMultiplier="1.15"
            android:textColorLink="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        >
        <Button
            android:id="@+id/btn_agree"
            style="@style/AppTheme.Widget.Button"
            android:text="@string/i_agree"
            />
        <Button
            android:id="@+id/btn_decline"
            style="@style/AppTheme.Widget.Button.Transparent"
            android:text="@string/decline"
            />
    </LinearLayout>
</LinearLayout>